--- a/roles/sat6-smart-class-parameters/tasks/main.yml
+++ b/roles/sat6-smart-class-parameters/tasks/main.yml
@@ -1,9 +1,10 @@
 ---
 
 - name: override smart class parameters
+  when: smart_class_parameters_override is defined
   command: >
-    hammer sc-param update 
-    --puppet-class '{{ item.0.class_name }}' 
+    hammer sc-param update
+    --puppet-class '{{ item.0.class_name }}'
     --name '{{ item.1 }}'
     --override true
   with_subelements:
