--- a/roles/sat6-domains/tasks/main.yml
+++ b/roles/sat6-domains/tasks/main.yml
@@ -16,5 +16,5 @@
 
 - name: ensure all domains are assigned to organization
   command: hammer domain update --name '{{ item }}' --organizations "{{ organization }}"
+  when: 'item not in current_domains.stdout'
   with_items: "{{ domains }}"
-
